<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/news_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/news_img"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            app:srcCompat="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_title"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_date"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/news_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_body"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="250dp"
            android:onClick="onClick"
            android:text="@string/button" />
    </LinearLayout>

</android.support.v7.widget.CardView>