<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/det_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/det_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/det_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/news_date"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/det_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_body"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>